--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "to-do-list",
   "version": "1.0.0",
+  "source": "src/app.js",
+  "module": "dist/module.js",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /to-do-list/"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,10 @@
   "homepage": "https://github.com/BoloMasta/to-do-list#readme",
   "dependencies": {
     "notiflix": "^3.2.5",
-    "notifly": "^0.0.1",
-    "Notifly": "^1.1.0",
     "vanilla-icon-picker": "^1.1.3"
   },
   "devDependencies": {
     "parcel": "^2.7.0"
-  }
+  },
+  "browserslist": "> 0.25%, not dead"
 }
