--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "to-do-list",
   "version": "1.0.0",
-  "source": "src/app.js",
+  "source": "dist/app.js",
   "description": "",
   "scripts": {
     "start": "parcel src/*.html",
