--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /to-do-list/"
+    "build": "parcel build src/*.html --public-url /to-do-list/",
+    "deploy": "rm -rf dist/ && npm build && gh-pages -d dist"
   },
   "repository": {
     "type": "git",
