--- a/.gitignore
+++ b/.gitignore
@@ -78,14 +78,14 @@ typings/
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
-.parcel-cache
+.parcel-cache/
 
 # Next.js build output
 .next
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/
 
 # Gatsby files
 .cache/
